[tool.poetry]
name = "pixel"
version = "0.1.0"
description = ""
authors = ["nerdhof.garden"]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.3"
jupyter = "^1.0.0"
matplotlib = "^3.8.2"
numba = "^0.58.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
